# rust-arblab

./: .dockerignore  .gitignore  ADVANCED_MEANREV_FEATURES.md  AUTO_LOAD_FEATURE.md  BUG_FIX_COMPLETE.md  CHIARELLA_DELIVERY.md  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_FEATURES.txt  COMPLETE_FIX_SUMMARY.md  COMPLETE_REFACTORING_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DATA_FETCHING_FIXES.md  DATA_FORMAT_FIX.md  DELIVERY_SUMMARY.md  DETAILED_ANALYSIS_FEATURE.md  DOCKER_UPDATE_SUMMARY.md  DUAL_BACKEND_MODE.md  DUAL_BACKEND_SUMMARY.txt  Dockerfile  Dockerfile.no-tick  Dockerfile.old  Dockerfile.tick  ENHANCED_SYSTEM_SUMMARY.md  ENHANCEMENT_SUMMARY.md  FINNHUB_DATA_MIGRATION.md  GRPC_MIGRATION_COMPLETE.md  GRPC_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  MEANREV_IMPLEMENTATION.md  MIGRATION_COMPLETE.txt  MIGRATION_STATUS_FINAL.md  MULTI_APP_SUMMARY.md  MULTI_STRATEGY_SUMMARY.md  Makefile  Makefile.docker  NAVIGATION_GUIDE.md  PROJECT_STATUS.md  PULL_REQUEST.md  PULL_REQUEST_INSTRUCTIONS.md  (+48 more)
.streamlit/: config.toml
app/: HFT_Arbitrage_Lab.py  README.md  main_app.py  requirements.txt  streamlit_advanced_meanrev.py  streamlit_advanced_meanrev_enhanced.py  streamlit_all_strategies.py  streamlit_app.py  streamlit_chiarella_enhanced.py  streamlit_meanrev.py
data/: sample_market.csv
docker/: requirements.txt
docs/: ALPACA_SUPPORT.md  AUTO_DISCOVERY_IMPLEMENTATION_SUMMARY.md  CHIARELLA_SIGNALS_GUIDE.md  CODING_PATTERNS_GUIDE.md  CONTRIBUTING.md  DATA_PERSISTENCE_GUIDE.md  DOCKER_SETUP.md  DRIFT_UNCERTAINTY_UI_GUIDE.md  GRPC_ARCHITECTURE.md  JUPYTER_NOTEBOOKS_SUMMARY.md  MASSIVE_IMPLEMENTATION_SUMMARY.md  MASSIVE_INTEGRATION.md  MASSIVE_S3_FLATFILES_SETUP.md  OPTIMIZR_REFACTORING_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART_APP.md  QUICK_REFERENCE.md  README.md  ROUGH_HESTON_GUIDE.md  RUST_LOB_IMPLEMENTATION.md  SPARSE_MEANREV_DELIVERY.md  SPARSE_MEANREV_QUICKSTART.md  SPARSE_MEANREV_SUMMARY.md  UI_NAVIGATION_GUIDE.md
hft-grpc-server/: Cargo.toml  build.rs
hft-grpc-server/src/: main.rs  pair_discovery.rs
hft-grpc-server/src/algorithms/: hmm.rs  meanrev.rs  mod.rs  portfolio.rs  sparse.rs
hft-grpc-server/src/finance/: backtest.rs  cointegration.rs  hurst.rs  mod.rs  ou_estimator.rs
hft-grpc-server/src/proto/: hft.rs
hft-grpc-server/src/services/: mod.rs
mock_apis/: app.py
proto/: drift.proto  hft_service.proto  meanrev.proto  options.proto  pair_discovery.proto  regime.proto  superspace.proto  trading.proto
python/: QUICK_REFERENCE.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  __init__.py  adaptive_strategies.py  advanced_optimization.py  api_keys.py  ccxt_helper.py  coingecko_helper.py  data_fetcher.py  data_persistence.py  factories.py  finnhub_helper.py  grpc_client.py  hft_py_fallback.py  lob_recorder.py  meanrev.py  meanrev_pb2.py  meanrev_pb2_grpc.py  pair_discovery_client.py  pair_discovery_pb2_grpc.py  retry_utils.py  rust_bridge.py  rust_connector.pyi  rust_grpc_bridge.py  signal_monitor.py  sparse_meanrev.py  type_fixes.py  universes.py  virtual_portfolio.py
python_client/: backtest.py  drift_pb2.py  drift_pb2_grpc.py  execution.py  hft_client.py  hft_service_pb2.py  hft_service_pb2_grpc.py  options_pb2.py  options_pb2_grpc.py  pair_discovery_pb2.py  pair_discovery_pb2_grpc.py  regime_pb2.py  regime_pb2_grpc.py  superspace_pb2.py  superspace_pb2_grpc.py  trading_pb2_grpc.py
rust_connector/: Cargo.toml  alpaca.rs
rust_connector/src/: lib.rs  lob.rs  meanrev.rs  optimization.rs  sparse_meanrev.rs
rust_core/: Cargo.toml
rust_core/connectors/alpha_vantage/: Cargo.toml
rust_core/connectors/alpha_vantage/src/: lib.rs
rust_core/connectors/binance/src/: rest.rs  ws.rs
rust_core/connectors/coinbase/src/: rest.rs  ws.rs
rust_core/connectors/coingecko/src/: rest.rs
rust_core/connectors/common/: Cargo.toml
rust_core/connectors/common/src/: errors.rs  lib.rs  retry.rs
rust_core/connectors/kraken/src/: rest.rs  ws.rs
rust_core/signature_optimal_stopping/: Cargo.toml
rust_core/signature_optimal_stopping/src/: lib.rs
rust_core/signature_optimal_stopping_py/: Cargo.toml  README.md
rust_core/signature_optimal_stopping_py/.cargo/: config.toml
rust_core/signature_optimal_stopping_py/src/: lib.rs
rust_core/src/: Cargo.toml  chiarella.rs  flat_file_processor.rs  lib.rs  matching_engine.rs  options.rs  orderbook.rs  portfolio_drift_uncertainty.rs  regime_portfolio.rs  rough_heston.rs  signature_optimal_stopping.rs  signature_portfolio.rs  statistical_analyzer.rs
rust_core/src/strategies/: mm.rs  pairs.rs
rust_core/src/stream/: mod.rs
rust_core/src/superspace/: anomaly_detector.rs  chern_simons.rs  ghost_fields.rs  grassmann.rs  mod.rs  superspace_14d.rs
rust_grpc_service/: Cargo.toml  build.rs
rust_grpc_service/src/: drift_service.rs  lib.rs  main.rs  models.rs  options_service.rs  regime_service.rs  service.rs  superspace_service.rs  trading_service.rs
rust_python_bindings/: Cargo.toml  Cargo.toml.bak.1762563027  Cargo.toml.bak.1762563659  __init__.pyi  hft_py.pyi  statistical_analyzer.pyi
rust_python_bindings/.cargo/: config.toml
rust_python_bindings/src/: alpha_vantage_bindings.rs  analytics_bindings.rs  analytics_bindings_old.rs  chiarella_bindings.rs  flat_file_bindings.rs  lib.rs  options_bindings.rs  portfolio_drift_bindings.rs  regime_portfolio_bindings.rs  rough_heston_bindings.rs  signature_bindings.rs  statistical_analyzer_bindings.rs  superspace_bindings.rs
rust_python_bindings/src/analytics_bindings/analytics/: error.rs  matrix.rs  mod.rs  rolling.rs  statistics.rs  traits.rs
scripts/: README.md  activate.sh  clean_restart_streamlit.sh  dev.sh  generate_grpc_python.sh  generate_proto.sh  grpc_smoke_test.py  install_optimizr.sh  quick_rust_build.sh  restart_all.sh  restart_rust.sh  run_app.sh  run_standalone.sh  run_with_auth.sh  setup_env.sh  setup_grpc.sh  setup_project.sh  start_dual_backend.sh  start_grpc_server.sh  start_jupyter.sh  test_algorithms.py  (+4 more)
(+161 files in other folders)
