[package]
name = "hft-grpc-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hft-server"
path = "src/main.rs"

[dependencies]
# gRPC
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = "0.1"

# Core functionality (removed rust_core dependency to avoid Python conflicts)
# rust_core = { path = "../rust_core" }
ndarray = "0.15"
nalgebra = "0.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.11"
