[package]
name = "rust_connector"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_connector"
crate-type = ["cdylib"]

[dependencies]
# Use PyO3 with stable ABI - one build works for Python 3.8-3.13+
# This eliminates version compatibility issues
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }

# Tokio + websockets
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"

# HTTP / JSON / logging
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
fastrand = "1.8"
regex = "1.10"

# ethers 2.x split into subcrates. Use explicit subcrates to access Contract/Provider types.
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
ethers-contract = "2.0.14"
ethers-signers = "2.0.14"
ethers-middleware = "2.0.14"

# Linear algebra for mean-reversion algorithms
ndarray = { version = "0.15", features = ["serde"] }
nalgebra = "0.32"

# For LOB implementation
ordered-float = "4.2"
chrono = { version = "0.4", features = ["serde"] }