[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[features]
large-datasets = []

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
connectors_common = { path = "connectors/common" }
log = "0.4"
env_logger = "0.10"
libm = "0.2"
rand = "0.8"

# Data processing dependencies
polars = { version = "0.35", features = ["lazy", "parquet", "csv", "json", "dtype-date", "dtype-datetime"] }
aws-config = "1.0"
aws-sdk-s3 = "1.9"
