[package]
name = "rust_grpc_service"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
rust_core = { path = "../rust_core" }


[build-dependencies]
tonic-build = "0.11"

