[package]
name = "rust_python_bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "hft_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time"] }
connectors_common = { path = "../rust_core/connectors/common" }
aggregator = { path = "../rust_core/aggregator" }
connector_binance = { path = "../rust_core/connectors/binance" }
connector_kraken = { path = "../rust_core/connectors/kraken" }
connector_coinbase = { path = "../rust_core/connectors/coinbase" }
connector_coingecko = { path = "../rust_core/connectors/coingecko" }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
