[package]
name = "signature_optimal_stopping_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "signature_optimal_stopping_py"
crate-type = ["cdylib"]

[dependencies]
# Use PyO3 with stable ABI for maximum compatibility
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
env_logger = "0.10"

# Local signature crate
signature_optimal_stopping = { path = "../signature_optimal_stopping" }