[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time", "sync"] }
libm = "0.2"
rand = "0.8"

[dev-dependencies]
