[package]
name = "connector_alpha_vantage"
version = "0.1.0"
edition = "2021"

[dependencies]
connectors_common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
